# wirelog

./: .clang-format  .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLA.md  CLAUDE.md  CONTRIBUTING.md  LINTING.md  PHASE-3-STATUS.md  README.md  meson.build  meson_options.txt  prd.json  progress.txt  uncrustify.cfg
.github/codeql/: codeql-config.yml
.github/workflows/: ci-main.yml  ci-pr.yml  ci.yml  codeql.yml  lint-main.yml  lint-pr.yml  lint.yml  static-analysis.yml
bench/: bench_argv.h  bench_col_layout.c  bench_flowlog.c  bench_util.h  datagen.c  meson.build
bench/data/: tree_100.csv
bench/data/ddisasm/: cond_jump.csv  direct_call.csv  direct_jump.csv  instruction.csv  next.csv  nop.csv  return_inst.csv
bench/data/galen/: c.csv  inputP.csv  inputQ.csv  rc.csv  s.csv  u.csv
bench/workloads/: bipartite.dl  ddisasm.dl  galen.dl  sg.dl
docs/: ARCHITECTURE.ko.md  ARCHITECTURE.md  COMPOUND_TERMS.md  LIBSOUP_PATTERNS_FOR_WIRELOG.md  SEMANTICS.md  STRESS_BASELINE.md  SYNTAX.md  index.md
docs/cspa-analysis/: CONSOLIDATE-IMPROVEMENT-PLAN.md  CSPA-BASELINE-PROFILE.md  DELTA-EXPANSION-ANALYSIS.md  DELTA-EXPANSION-IMPROVEMENT-PLAN.md
docs/cspa-improvement-plan/: CRITICAL-FINDINGS-SYNTHESIS.md  README.md
docs/merge-optimization/: SIMD-ROW-COMPARISON-DESIGN.md
docs/mobius/: ANALYSIS.md  ARCHITECT_REVIEW.md  CRITIC_RESOLUTION.md  CRITIC_REVIEW.md  DECISION.md  EXECUTION_OPTIONS.md  IMPLEMENTATION_DESIGN.md  INTEGRATION_ANALYSIS.md  MOBIUS_INVERSION_TECHNICAL.md  README.md
docs/performance/: 3B-002-CONSOLIDATION-ANALYSIS.md  ADR-002-parallelism-strategy.md  ADR-003-TEMPLATE-phase-2-3-sequencing.md  ARCHITECT-FINAL-SIGN-OFF.txt  ARCHITECT-VERIFICATION-CHECKLIST.md  CODEX-IMPLEMENTATION-ANALYSIS.md  CONSENSUS-SUMMARY-2026-03-07.md  CSPA-VALIDATION-RESULTS.md  DD-INVESTIGATION.md  DOCUMENT-QUALITY-AUDIT.md  HYPOTHESIS-VALIDATION.md  K-FUSION-ARCHITECTURE.md  K-FUSION-DESIGN.md  OPTIMIZATION-STRATEGY.md  OPTION2-CSE-ANALYSIS.md  OPTION2-DESIGN.md  OPTION2-TESTS.md  PERFORMANCE-BREAKTHROUGH-COMPREHENSIVE-SUMMARY.md  PERFORMANCE-BREAKTHROUGH-SYNTHESIS.md  PERFORMANCE-INVESTIGATION-2026-03-07.md  (+10 more)
examples/08-delta-queries/: README.md  delta_demo.c  meson.build
examples/13-daemon-style/: README.md  daemon.c  meson.build  run.sh
examples/path_a_pcap_skeleton/: main.c  meson.build
scripts/: run_cspa_validation.sh  run_doop_validation.sh
subprojects/: nanoarrow.wrap
tests/: col_rel_deep_copy_fixture.c  col_rel_deep_copy_fixture.h  fpga_backend.c  meson.build  test_arena_observability.c  test_arrangement.c  test_bench_argv.c  test_bitwise_integration.c  test_bitwise_parser.c  test_bitwise_types.c  test_cli.c  test_cli_watch.c  test_col_rel_deep_copy.c  test_compaction.c  test_compound_arena_freeze_cycle_stress.c  test_compound_side_relation.c  test_consolidate_incremental_delta.c  test_consolidate_kway_merge.c  test_constant_filter_pushdown.c  test_cryptographic_hashes.c  test_cse_cache_hit_rate.c  test_dd_execute.c  test_dd_ffi.c  test_dd_plan.c  test_deep_copy_ledger_canary.c  test_delta_arrangement.c  test_delta_callback.c  test_delta_timestamp.c  test_diff_arrangement_deep_copy_buckets.c  test_diff_integration.c  test_diff_join.c  test_frontier_skip.c  test_frontier_skip_mobius.c  test_handle_remap_apply.c  test_handle_remap_side_apply.c  test_intern.c  test_io_adapter.c  test_io_ctx.c  test_io_dispatch.c  test_ir.c  (+50 more)
wirelog/: backend.h  backend_dd.c  crc32.c  exec_plan.h  exec_plan_gen.c  intern.c  intern.h  meson.build  session.c  session.h  session_facts.c  session_facts.h  wirelog-ir.h  wirelog-optimizer.h  wirelog-parser.h  wirelog-types.h  wirelog.h  wl_easy.c  wl_easy.h  workqueue.c  workqueue.h
(+85 files in other folders)
